--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "simple-react-validator": "^1.5.0",
     "simplebar-react": "^2.2.1"
   },
   "scripts": {
